<resources>
    <string name="app_name">tfgPedroLlompart2</string>
    <string name="title_home">Busqueda</string>
    <string name="title_dashboard">Carrito</string>
    <string name="title_notifications">Perfil de Usuario</string>
    <string name="title_sell">Vender</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btn_sell_product">Navega a la ventana de transacción bancaria.</string>
    <string name="back_button_desc">Navega de vuelta a la ventana anterior.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar">Confirmar</string>
    <string name="al_crear_una_cuenta_acepto_los_t_rminos_y_condiciones_y_las_pol_ticas_de_privacidad_de_netjoy_com">Al crear una cuenta,acepto los términos y condiciones y las políticas de privacidad de netjoy.com.</string>
    <string name="ingresa_la_direcci_n_de_correo_electr_nico_que_utilizaste_anteriormente_y_te_enviaremos_instrucciones_de_como_reestablecer_tu_contrase_a">Ingresa la dirección de correo electrónico que utilizaste anteriormente y te enviaremos instrucciones de como reestablecer tu contraseña.</string>
    <string name="continuar">continuar</string>
    <string name="editar_perfil">Editar perfil:</string>
    <string name="elige_un_icono_para_el_perfil">Elige un icono para el perfil:</string>
    <string name="los_b_sicos">Los Básicos:</string>
    <string name="tu_nombre">Tu nombre</string>
    <string name="icono_1_b_sico">Icono 1 básico</string>
    <string name="icono_2_b_sico">Icono 2 básico</string>
    <string name="icono_3_b_sico">Icono 3 básico</string>
    <string name="icono_4_b_sico">Icono 4 básico</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">texto</string>
</resources>